--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
           GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
           GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
     - name: Push to Artifact registry  
-      uses: par-tec/docker-push-gar-image@latest
+      uses: par-tec/docker-push-gar-image@v0.0.3
       with:
         image_name: messageutil
         image_tag: v1.0.0
